release xstate 1.2.0